--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Ode to Chocolate</title>
 </head>
 <body>
 
 <h1>An Ode to Chocolate</h1>
+<p>by Rafael</p>
 
 <h2>A Chocolatey Reflection</h2>
 
